# finalduckie

code/src/scripts/: advanced_lane_following_node.py
src/: CMakeLists.txt  package.xml
src/LaneFollowing/: CMakeLists.txt  README.md  package.xml
src/LaneFollowing/scripts/: advanced_lane_following_node.py
src/launch/: advanced_lane_following.launch
src/shivamduckie/: CMakeLists.txt  package.xml
src/shivamduckie/config/: blueduckie_params.yaml
