<?xml version="1.0"?>
<package format="2">
  <name>blueduckie_advanced_lane_following</name>
  <version>1.0.0</version>
  <description>Advanced lane following for BlueDuckie</description>
  
  <maintainer email="you@example.com">BlueDuckie Team</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>duckietown_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  
  <export></export>
</package>